# python

./: .gitignore  CLAUDE.md  LICENSE  README.md  llms.txt  pyproject.toml
.github/workflows/: ci.yml
src/sirr/: __init__.py  _async_client.py  _client.py  _exceptions.py  _models.py  _transport.py
tests/: conftest.py  test_async_client.py  test_client.py  test_e2e_multitenant.py  test_integration.py  test_models.py  test_multi_tenant.py  test_new_async_methods.py  test_new_features.py  test_new_methods.py
