[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sirr"
version = "0.1.0"
description = "Python client for the Sirr ephemeral secret vault"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "SirrVault" }]
keywords = ["secrets", "vault", "ephemeral", "ai", "agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = ["httpx>=0.27,<1"]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
    "ruff>=0.9",
    "pytest-cov>=6",
    "build",
]

[project.urls]
Homepage = "https://github.com/sirrlock/python"
Repository = "https://github.com/sirrlock/python"

[tool.hatch.build.targets.wheel]
packages = ["src/sirr"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
